--- a/SendMe/Views/Home/Index.cshtml
+++ b/SendMe/Views/Home/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>Send Me</h1>
-    <p class="lead">Placeholder</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="landing-img">
+    hello
 </div>
 
