--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>                
-                <img class="logo-nav" src="~/Img/SendMe Logo.png" />                
+                </button>
+                <img class="logo-nav" src="~/Img/SendMeLogoTxt.png" />
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -32,13 +32,39 @@
             </div>
         </div>
     </div>
-    <div class="body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+    <div class="wrapper">
+        <div class="body-content">
+            @RenderBody()
+            <hr />
+        </div>
+        @if (ViewBag.DisplayFootLogo != false)
+        {
+            <footer class="footer-distributed">
+                @*http://tutorialzine.com/2015/01/freebie-5-responsive-footer-templates/*@
+                <div class="footer-left">
+                    <img class="footer-logo" src="~/Img/SendMeBanner-WhtTxt.png" />
+
+                    @{ ViewBag.Year = DateTime.Today.Year; }
+                    <p class="footer-company-name">
+                        SendMe!&copy; @ViewBag.Year
+                    </p>
+
+                </div>
+
+                <div class="footer-right">
+                    <p>Contact Us</p>
+
+                    <form action="#" method="post">
+                        <input type="text" name="email" placeholder="Email" />
+                        <textarea name="message" placeholder="Message"></textarea>
+                        <button>Send</button>
+                    </form>
+                </div>
+            </footer>
+         }
     </div>
+
     <script src="https://js.stripe.com/v3/"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
