--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
 
     <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeRXmZZlGZELFdxR7815FJirzZDHiZRY4"
+            type="text/javascript"></script>
 
 </head>
 <body>
