--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -50,7 +50,7 @@
             {
             <!--DONATE-->
                 <div class="btn-group">
-                    <a href="#" class="btn btn-fab" id="donate">
+                    <a href="#" class="btn btn-fab" id="donateBtn">
                         <i class="material-icons">
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="#FFF" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
@@ -143,7 +143,7 @@
                                             <div class="btn-group-sm hidden" id="mini-fab">
                                                 <!--VIEW DONATIONS-->
                                                 <span data-toggle="modal" data-target="#donationsModal">
-                                                    <button type="button" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Donation List" id="modalBtn">
+                                                    <button type="button" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Donation List" id="viewDonationsBtn">
                                                         <i class="material-icons">
                                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                                                 <path fill="#1ABBAC" d="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8V5H4M4,19H8V15H4M4,14H8V10H4V14Z" />
@@ -153,7 +153,7 @@
                                                 </span>
                                                 <!--ADD DONATION-->
                                                 <a href="#"
-                                                   class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Add Donation" title="" id="donate">
+                                                   class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Add Donation" title="" id="donateBtn">
                                                     <i class="material-icons">
                                                         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                                             <path fill="#1ABBAC" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
@@ -170,7 +170,7 @@
                                                 </a>
                                                 <!--EDIT TRIP-->
                                                 <span data-toggle="modal" data-target="#editTripModal">
-                                                    <button type="button" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Edit" id="edit">
+                                                    <button type="button" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Edit" id="editTripBtn">
                                                         <i class="material-icons">
                                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                                                 <path fill="#1ABBAC" d="M16.84,2.73C16.45,2.73 16.07,2.88 15.77,3.17L13.65,5.29L18.95,10.6L21.07,8.5C21.67,7.89 21.67,6.94 21.07,6.36L17.9,3.17C17.6,2.88 17.22,2.73 16.84,2.73M12.94,6L4.84,14.11L7.4,14.39L7.58,16.68L9.86,16.85L10.15,19.41L18.25,11.3M4.25,15.04L2.5,21.73L9.2,19.94L8.96,17.78L6.65,17.61L6.47,15.29" />
@@ -198,85 +198,7 @@
                 </div>
             }
 
-            <!-----------Modal for donations------------->
-            @if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
-            {
-                <div class="modal fade" id="donationsModal" tabindex="-1" role="dialog" aria-labelledby="donationsLabel">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            </div>
-                            <div class="modal-body">
-                                <table id="donorTable">
-                                    <tr>
-                                        <th>Donor Name</th>
-                                        <th>Amount Donated</th>
-                                        <th>&nbsp;</th>
-                                    </tr>
-                                    @foreach (var donation in Model.ActiveTrip.Donations)
-                                    {
-                                        <tr>
-                                            <td>
-                                                @donation.Donor.Name
-                                            </td>
-                                            <td>
-                                                $@donation.Amount .00
-                                            </td>
-                                            <td>
-                                                @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
-                                                {
-                                                    <button data-toggle="collapse" data-target="@("#thanks"+donation.Id)" class="btn btn-sm">
-                                                        <span class="glyphicon glyphicon-envelope"></span>
-                                                    </button>
-                                                }
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="3">
-                                                <div id="@("thanks"+donation.Id)" class="collapse">
-                                                    @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
-                                                    {
-                                                        <div class="form-actions no-color">
-                                                            <label for="#thnksMsg">Add a personal message!</label>
-                                                            <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
-                                                            <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
-                                                                <span class="glyphicon glyphicon-send"> Send</span>
-                                                            </button>
-                                                        </div>
-                                                    }
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    }
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-
-            <!-----------Edit Trip Modal------------->
-            @if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
-            {
-                <div class="modal fade" id="editTripModal" tabindex="-1" role="dialog" aria-labelledby="editTripModal">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="editTripLabel">Edit Trip</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div id="editTrip">
-                                    @(Html.Action("RenderPartial", "Trip", new { trip = Model.ActiveTrip.Trip }))
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-
-
+          
             <!-----------Partial View For Payment------------->
             @if (Model.ActiveTrip != null)
             {
@@ -292,61 +214,26 @@
                     </script>
                 </div>
             }
-
-
-            <!-----------Successful Payment Message------------->
-            <div id="successMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
-                 data-keyboard="false">
-                <div class="modal-header modal-header-success">
-                    <div class="modal-dialog modal-sm" role="document">
-                        <div id="successModalContent" class="modal-content">
-                            <div class="modal-header modal-header-success">
-                                <h1><i class="glyphicon glyphicon-thumbs-up"></i>Payment Success</h1>
-                            </div>
-                            <div class="modal-body">
-                                <div class="modal-body">
-                                    <h4 class="display-3">
-                                        @ViewBag.PaymentMsg
-                                    </h4>
-                                    <p>
-                                        <button type="button" class="btn btn-danger" id="approveMsgBtn">X Close</button>
-                                    </p>
-                                    <hr />
-                                    <hr />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-
-            <!-----------Failed Payment Message------------->
-            <div id="failedMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
-                 data-keyboard="false">
-                <div class="modal-header modal-header-success">
-                    <div class="modal-dialog modal-sm" role="document">
-                        <div id="failedModalContent" class="modal-content">
-                            <div class="modal-header modal-header-danger">
-                                <h1><i class="glyphicon glyphicon-thumbs-down"></i>There is a problem with the Payment</h1>
-                            </div>
-                            <div class="modal-body">
-                                <div class="modal-body">
-                                    <h4 class="display-3">
-                                        @ViewBag.PaymentMsg
-                                    </h4>
-                                    <p>
-                                        <button type="button" class="btn btn-warning" id="declineMsgBtn">X Close</button>
-                                    </p>
-                                    <hr />
-                                    <hr />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
     </div>
 </div>
 <!--/.Card-->
+     <!-----------Successful Payment Message------------->
+<div id="paymentSuccessToggle">
+    @Html.Partial("_PaymentSuccessPartial")
+</div>
+
+ <!-----------Failed Payment Message------------->
+<div id="paymentFailedToggle">
+    @Html.Partial("_PaymentFailedPartial")
+</div>
+
+<!-----------View Donations------------->
+<div id="viewDonationsToggle">
+    @Html.Partial("_ViewDonationsPartial")
+</div>
+
+<!-----------Edit Trip------------->
+<div id="editTripToggle">
+    @Html.Partial("_editTripPartial")
+</div>
