--- a/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
+++ b/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
@@ -1,56 +1,105 @@
-﻿@if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
-            {
-    <div class="modal fade" id="donationsModal" tabindex="-1" role="dialog" aria-labelledby="donationsLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body">
-                    <table id="donorTable">
-                        <tr>
-                            <th>Donor Name</th>
-                            <th>Amount Donated</th>
-                            <th>&nbsp;</th>
-                        </tr>
-                        @foreach (var donation in Model.ActiveTrip.Donations)
-                        {
-                            <tr>
-                                <td>
-                                    @donation.Donor.Name
-                                </td>
-                                <td>
-                                    $@donation.Amount .00
-                                </td>
-                                <td>
-                                    @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
+﻿
+@if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
+{ 
+    <div class="continer">
+
+        @{int i = 0;}
+        @foreach (var donation in Model.ActiveTrip.Donations)
+        {
+            <script> var Di = @i;</script>
+            <div class="panel-group" id="accordion_@i" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default" id="panel_@i">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" id="accBtn_@i" data-parent="#accordion_@i" aria-expanded="true" aria-controls="collapseAcc_@i" data-target="#collapseAcc_@i">
+                                <h3> $@donation.Amount .00</h3>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseAcc_@i" class="panel-collapse glyphicon-collapse-in" role="tabpanel" aria-labelledby="headingOne">
+                        <div class="panel-body" id="accPanalBody">
+                            @donation.Donor.Name donated $@donation.Amount .00 on @donation.Created
+                            @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
+                            {
+                                <button data-toggle="collapse" data-target="@("#thanks" + donation.Id)" class="btn btn-sm">
+                                    <span class="glyphicon glyphicon-envelope"></span>
+                                </button>
+                                <div id="@("thanks" + donation.Id)" class="collapse">
+                                    @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
                                     {
-                                        <button data-toggle="collapse" data-target="@("#thanks"+donation.Id)" class="btn btn-sm">
-                                            <span class="glyphicon glyphicon-envelope"></span>
-                                        </button>
+                                        <div class="form-actions no-color">
+                                            <label for="#thnksMsg">Add a personal message!</label>
+                                            <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
+                                            <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
+                                                <span class="glyphicon glyphicon-send"> Send</span>
+                                            </button>
+                                        </div>
                                     }
-                                </td>
-                            </tr>
-                                        <tr>
-                                            <td colspan="3">
-                                                <div id="@("thanks"+donation.Id)" class="collapse">
-                                                    @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
-                                                    {
-                                                        <div class="form-actions no-color">
-                                                            <label for="#thnksMsg">Add a personal message!</label>
-                                                            <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
-                                                            <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
-                                                                <span class="glyphicon glyphicon-send"> Send</span>
-                                                            </button>
-                                                        </div>
-                                                    }
-                                                </div>
-                                            </td>
-                                        </tr>
-                        }
-                    </table>
+                                </div>
+
+                            }
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+            i++;
+        }
     </div>
-}
+            }
+            //OLD MODEL
+            @*@if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
+                            {
+                    <div class="modal fade" id="donationsModal" tabindex="-1" role="dialog" aria-labelledby="donationsLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                </div>
+                                <div class="modal-body">
+                                    <table id="donorTable">
+                                        <tr>
+                                            <th>Donor Name</th>
+                                            <th>Amount Donated</th>
+                                            <th>&nbsp;</th>
+                                        </tr>
+                                        @foreach (var donation in Model.ActiveTrip.Donations)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @donation.Donor.Name
+                                                </td>
+                                                <td>
+                                                    $@donation.Amount .00
+                                                </td>
+                                                <td>
+                                                    @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
+                                                    {
+                                                        <button data-toggle="collapse" data-target="@("#thanks"+donation.Id)" class="btn btn-sm">
+                                                            <span class="glyphicon glyphicon-envelope"></span>
+                                                        </button>
+                                                    }
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="3">
+                                                    <div id="@("thanks"+donation.Id)" class="collapse">
+                                                        @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
+                                                        {
+                                                            <div class="form-actions no-color">
+                                                                <label for="#thnksMsg">Add a personal message!</label>
+                                                                <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
+                                                                <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
+                                                                    <span class="glyphicon glyphicon-send"> Send</span>
+                                                                </button>
+                                                            </div>
+                                                        }
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }*@
