--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -117,7 +117,7 @@
 
                     <div class="col-md-5">
                         <!--MAP-->
-                        <div id="map" style="width: 350px; height: 350px; border: 2px solid #1abbac;"></div><br />
+                        <div id="map" style="width: 650px; height: 550px; border: 5px solid #DADEE0;"></div><br />
                     </div>
 
                     <div class="col-md-5" id="tripDetails">
@@ -214,6 +214,11 @@
                     </script>
                 </div>
             }
+            <!-----------View Donations Partial------------->
+            <div id="viewDonationsToggle">
+                @Html.Partial("_ViewDonationsPartial")
+            </div>
+
             </div>
     </div>
 </div>
@@ -226,11 +231,6 @@
  <!-----------Failed Payment Message------------->
 <div id="paymentFailedToggle">
     @Html.Partial("_PaymentFailedPartial")
-</div>
-
-<!-----------View Donations------------->
-<div id="viewDonationsToggle">
-    @Html.Partial("_ViewDonationsPartial")
 </div>
 
 <!-----------Edit Trip------------->
