--- a/SendMe/Views/Home/Index.cshtml
+++ b/SendMe/Views/Home/Index.cshtml
@@ -2,9 +2,5 @@
     ViewBag.Title = "Home";
 }
 
-<div class="landing-img">
-    hello 
-    <br />
-    ...Hi
-</div>
+<img class="landing-img" src="~/Img/SendMe Banner.png" />
 
