--- a/SendMe/Views/Shared/_PaymentFailedPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentFailedPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="failedMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
+﻿<div id="failedMsgModal" class="modal bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
      data-keyboard="false">
     <div class="modal-header modal-header-success">
         <div class="modal-dialog modal-sm" role="document">
