--- a/SendMe/Views/School/Index.cshtml
+++ b/SendMe/Views/School/Index.cshtml
@@ -13,93 +13,90 @@
         ViewBag.logoUrl = "#";
     };
 }
-<div class="profile-card">
+
+<!--------SCHOOL DETAILS---------->
+<div class="profile-card school-card">
     <div class="card">
         <div class="card-img-top" style="background-image: url(@Model.CoverImg.FilePath)"></div>
         <img class="card-prof-pic" src="@Model.LogoImg.FilePath" />
         <div class="card-block">
             <h1 class="card-title"><a href="@Model.School.Website" target="_blank">@Model.School.Name</a></h1>
-            <h6 class="card-subtitle text-muted"><a href="../school/@Model.School.Id">@Model.School.Name</a></h6>            
-        </div>
-        <div class="card-block">
             @if (User.IsInRole("Admin") && ViewBag.UserSchId == Model.School.Id)
             {
-                @Html.ActionLink("Edit", "Manage", new { id = Model.School.Id })
+                <h6 class="card-subtitle text-muted">
+                    @Html.ActionLink("Edit", "Manage", new { id = Model.School.Id })
+                </h6>
             }
         </div>
     </div>
 </div>
 
+<div class="container-fluid">
+    <div class="row-fluid">
 
-
-<div class="row profile-header">
-    <div class="col-md-12 text-center marb-35">
-        <!-----------HEADER------------->
-        <h1 class="header-h">
-            <a href="@ViewBag.logoUrl" title="@ViewBag.logoUrlTitle">
-                <img class="img-thumbnail img-circle" src="@Model.LogoImg.FilePath" style="max-width: 300px" alt="School Logo" />
-            </a>
-            <a href="@Model.School.Website" target="_blank">@Model.School.Name</a>
-        </h1>
-        @if (User.IsInRole("Admin") && ViewBag.UserSchId == Model.School.Id)
-        {
-            @Html.ActionLink("Edit", "Manage", new { id = Model.School.Id })
-        }
+        <!-------------STUDENT DETAILS------------->
         @foreach (var student in Model.Students)
-        {
-            <h2>
-                <a href="../send/@student.Student.User.UserName">
-                    <img class="img-thumbnail img-circle" src="@student.Upload.FilePath" style="width: 150px; height: 150px" />
-                </a>
-
-                @student.Student.FirstName @student.Student.LastName
-            </h2>
-            if (student.ActiveTrip != null)
             {
-                <h3>@student.ActiveTrip.Trip.Title</h3>
-                            <sub>@student.ActiveTrip.Trip.Dates</sub>
-                            <p>
-                                @student.ActiveTrip.Trip.Desc
-                            </p>
-                            <p>
-                                @student.ActiveTrip.Trip.Destination <br />
-                                @student.ActiveTrip.Trip.TargetAmnt
-                            </p>
-
-                if (student.ActiveTrip.Donations.Count > 0)
-                {
-                    <p id="showSchIdxDonations">
-                        Show Donations<br />
-                        <span class="glyphicon glyphicon-chevron-down"> </span>
-                    </p>
-                                <p id="hideSchIdxDonations">
-                                    Hide Donations<br />
-                                    <span class="glyphicon glyphicon-chevron-up"> </span>
+            <div class="col-sm-12 col-lg-4">
+                <div class="profile-card sm-prof-card">
+                    <div class="card">
+                        <div class="card-img-top"></div>
+                        <a href="../send/@student.Student.User.UserName">
+                            <img class="card-prof-pic-sm" src="@student.Upload.FilePath" />
+                        </a>
+                        <div class="card-text">
+                            <h2 class="card-title">
+                                @student.Student.FirstName @student.Student.LastName
+                            </h2>
+                        </div>
+                        <div class="card-block">
+                            @if (student.ActiveTrip != null)
+                            {
+                                <h3>@student.ActiveTrip.Trip.Title</h3>
+                                <sub>@student.ActiveTrip.Trip.Dates</sub>
+                                <p>
+                                    @student.ActiveTrip.Trip.Destination <br />
+                                    @student.ActiveTrip.Trip.TargetAmnt
                                 </p>
-
-                                <table id="schIdxDonations">
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Email</th>
-                                        <th>Phone</th>
-                                        <th>Amount</th>
-                                    </tr>
-                                    @foreach (var donation in student.ActiveTrip.Donations)
-                        {
-                                        <tr>
-                                            <td>@donation.Donor.Name</td>
-                                            <td>@donation.Donor.Email</td>
-                                            <td>@donation.Donor.Phone</td>
-                                            <td>@donation.Amount</td>
-                                        </tr>
+                                if (User.IsInRole("Admin") && ViewBag.UserSchId == Model.School.Id)
+                                {
+                                    if (student.ActiveTrip.Donations.Count > 0)
+                                    {
+                                        <p id="showSchIdxDonations">
+                                            <button data-toggle="collapse" data-target="@("#show" + student.Id)">
+                                                <span class="glyphicon glyphicon-chevron-down">Donations</span>
+                                            </button>
+                                        </p>
+                                        <div id="@("show" + student.Id)" class="collapse">
+                                            <table id="schIdxDonations">
+                                                <tr>
+                                                    <th>Name</th>
+                                                    <th>Email</th>
+                                                    <th>Phone</th>
+                                                    <th>Amount</th>
+                                                </tr>
+                                                @foreach (var donation in student.ActiveTrip.Donations)
+                                                {
+                                                    <tr>
+                                                        <td>@donation.Donor.Name</td>
+                                                        <td>@donation.Donor.Email</td>
+                                                        <td>@donation.Donor.Phone</td>
+                                                        <td>@donation.Amount</td>
+                                                    </tr>
+                                                }
+                                            </table>
+                                        </div>
                                     }
-                                </table>
-                }
-            }
-            else
-            {
-                <h4>@student.Student.FirstName does not have any active trips.</h4>
-            }
+                                    else
+                                    {
+                                        <h4>@student.Student.FirstName does not have any active trips.</h4>
+                                    }
+                                }
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
     </div>
 </div>
