--- a/SendMe/Views/Shared/_CreateTrip.cshtml
+++ b/SendMe/Views/Shared/_CreateTrip.cshtml
@@ -6,10 +6,10 @@
 {
     string action = (ViewBag.Action == null) ? "Update" : ViewBag.Action;
 
-        using (Html.BeginForm(action, "Trip", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
-            <hr />
+    using (Html.BeginForm(action, "Trip", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -64,15 +64,15 @@
                     <button type="submit" id="tripCreate" class="btn btn-toolbar btn-success">
                         <span class="glyphicon glyphicon-check"></span>
                     </button>
+                    </div>
+                <div class="col-md-4" style="padding-top: 25px;">
+                    @if (action == "Update")
+                    {
+                        <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
+                            <span class="glyphicon glyphicon-ban-circle"></span>
+                        </a>
+                    }
                 </div>
-                @if (action == "Update")
-                {
-                <div class="col-md-4">
-                    <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
-                        <span class="glyphicon glyphicon-ban-circle"></span>
-                    </a>
-                </div>
-                }
             </div>
-        }
+    }
 }
